manifests/test/piraeus-operator/rbac.authorization.k8s.io_v1_clusterrole_piraeus-operator-gencert.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/name: piraeus-datastore
  name: piraeus-operator-gencert
rules:
- apiGroups:
  - admissionregistration.k8s.io
  resourceNames:
  - piraeus-operator-validating-webhook-configuration
  resources:
  - validatingwebhookconfigurations
  verbs:
  - get
  - list
  - watch
  - update
