manifests/test/piraeus-operator/v1_service_piraeus-operator-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: piraeus-datastore
  name: piraeus-operator-webhook-service
  namespace: piraeus-datastore
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/component: piraeus-operator
    app.kubernetes.io/name: piraeus-datastore
